
v0.9.112 (6 April 2018)
  - Fixed very annoying random crash under Windows/GTK3 under simulation, with bad day value for date/time display in
    free vars window (localtime function datas output). Modified with a copy struct tm + mutex.
  - When printing sequential under Windows, bad height of the rectangle including comment at the top of the page. Fixed.
  - On bools and free vars window, set size width char on entries for less larger windows.

v0.9.113 (4 January 2020)
  - In arithm expressions, constants can now also be used in functions + if function name not recognized, tell it instead of
    generic error at end + in general also display position string where the error occured.
    + new classic functions available to shift words : SHL() & SHR() & ROL() & ROR() with system %S8 for out bit (thanks
      to Franco Sabbaini for the first modifications).
    + no more segmentation fault in case of divide per zero (also reported by Franco Sabbaini) : instead return 0, set
      system %S7, and red backgroud for the first rung where the error occured (a little easier to found where...) !
      New rung error number info (for red background drawing) also added in protocol monitor exchange.
   - New variables browser window available. To see all available variables, and easily select a variable instead of manual
     typing. Used for free vars window, and in properties window for variables and arithmetic expressions.
   - If editor window closed, and "modifying" from popup menu, was opening editor window without checking menu "View / Editor window". fixed.
     + now also open editor window when adding or inserting a rung.

v0.9.114 (..... 2021)
   - When opening the variables browser, if already a var is present in the edit widget, display the corresponding combo type
     and select it per default in the list.
     + can double-click on a var in the list to validate variable selected (instead of clicking "OK" button, faster!).

