@@ -1,5 +1,6 @@
 
 void OpenBrowserVarsToReplace( GtkWidget *widget, GtkWidget * pEntryWidget );
 void OpenBrowserVarsToAdd( GtkWidget *widget, GtkWidget * pEntryWidget );
+void OpenBrowserVarsToReplaceOrAddIndex( GtkWidget *widget, GtkWidget * pEntryWidget );
 
 char OpenBrowserVars( GtkWidget * pEntryWidget, char AddMode );
